--- a/src/composer.json
+++ b/src/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "webbingbrasil/filament-advancedfilter": "^1.2"
     },
     "require-dev": {
         "doctrine/dbal": "^3.5",
